Fix #9944 Map connected to table with date attribute breaks the app (#9947)
* Fix #9944 Map connected to table with date attribute breaks the app

* fix date picker icon style

--- a/web/client/themes/default/less/widget.less
+++ b/web/client/themes/default/less/widget.less
@@ -246,6 +246,19 @@
                     font-size: @font-size-small;
                 }
             }
+            .rw-select {
+                .ms-popover {
+                    &,
+                    & > button {
+                        position: relative;
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
+            }
         }
         .mapstore-widget-default-content {
             // avoid editor defaults for text-widget
